# mullvadvpn-app

./: Cargo.toml
mullvad-daemon/: Cargo.toml
mullvad-daemon/src/: lib.rs  management_interface.rs
mullvad-management-interface/: Cargo.toml
mullvad-management-interface/src/: client.rs
scripts/: Cargo.toml
scripts/src/: lib.rs
talpid-core/: Cargo.toml
talpid-core/src/split_tunnel/windows/: mod.rs
